OSSN - OPEN SOURCE SOCIAL NETWORK v4.5

* (refactoring) add missing id #C2430
* Fix system error caused by non breaking spaces #1128
* Show confirmation before deleting groups #1133
* Allow to change the params for query for searching object, annotation, entities #1140
* Group by should be supported in OssnObject, Annotations, Entities #1139
* (OssnDatabase): group_by should be before order_by #1138
* OssnPhotos still exists when user delete #1142
* m.youtube.com not being parsed by embed component #1132
* Clicking close in system messages should close it complete #1137
* If user didn't exists not wall item #1110
* Broken wall posts upon deleting user #1129
* URL being passed as text in CHAT #1068
* Missing mcrypt module causes installation crash #941
* Added 'order_by' parm to ossn_get_relationships() #1148
* Added 'order_by' parm added to getFriends() #1147
* (OssnPoke): `OssnDatabaseException: Incorrect integer value #1151
* display online friends on top friends list #1154
* Added 3 hooks for easier configurable placement of ads #1165 - #1168
* Disable the input field for website url upon installation #1174
* Display online friends on top of friends list #1178
* Make toolbar button-row responsive #1180
* Making more icons available for usage in sidebar, etc. #1183
* No sound in case OssnMessages is disabled/not available #1186
* Logging out reloads newsfeed/main wall #1153
* Fixes slashes within the wall post #1216
* Handling of components with too long ids #1152
* Allow External On Redirect Function #1150
* Emoticon window/modal stays open after "post" #1173
* Expression of SELECT list is not in GROUP BY clause and contains nonaggregated column #1218
* Auto Save default notification email (noreply@host) to avoid users to enter their personal emails.
* Cover smaller then required size still sent to upload #1219

Thanks to Zet Man <https://www.opensource-socialnetwork.org/u/zetman> for his efforts and hard working for v4.5

OSSN - OPEN SOURCE SOCIAL NETWORK 4.4
