@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<component xmlns="http://www.opensource-socialnetwork.org/v/3.0">
+    <name>OssnAutoPagination</name>
+    <id>OssnAutoPagination</id>
+    <author>Core Team</author>
+    <description>Loads the pagination on newsfeed and userprofile automatically.</description>
+    <license>OPEN SOURCE SOCIAL NETWORK LICENSE (OSSN LICENSE) v3.0</license>
+    <author_url>https://www.softlab24.com/</author_url>
+    <license_url>https://www.opensource-socialnetwork.org/licence/</license_url>
+    <version>1.1</version>
+	<requires>
+		<type>ossn_version</type>
+		<version>4.6</version>
+	</requires>
+</component>
