@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <opensource_socialnework xmlns="http:/opensource-socialnetwork.org/v/1.0">
-    <version>4.6</version>
+    <version>5.0 RC1</version>
     <stable_version>4.6</stable_version>
-    <release>1513783390</release>
-    <build>76543da00bd0b1ff41c0d534f1988045</build>
+    <release>1538812874</release>
+    <build>0fa347ccf06f43f4692a80c6f34d2023</build>
     <licence>Open Source Social Network License (OSSN LICENSE) v3.0</licence>
     <author_url>http://www.opensource-socialnetwork.org</author_url>
     <copyright>(C) 2014-2015 Informatikon Technologies, 2015-2018 SOFTLAB24 LTD, 2014-2018 Open Source Social Network. All rights reserved</copyright>
