@@ -1,0 +1,33 @@
+<?php
+/**
+ * Open Source Social Network
+ *
+ * @package   (softlab24.com).ossn
+ * @author    OSSN Core Team <info@softlab24.com>
+ * @copyright 2014-2017 SOFTLAB24 LIMITED
+ * @license   Open Source Social Network License (OSSN LICENSE)  http://www.opensource-socialnetwork.org/licence
+ * @link      https://www.opensource-socialnetwork.org/
+ */
+ossn_generate_server_config('apache');
+ossn_version_upgrade($upgrade, '5.0');
+
+$new_components = array(
+		'OssnAutoPagination'
+);
+
+$components = new OssnComponents;
+$systemcoms = $components->getComponents();
+
+foreach($new_components as $item) {
+		if(!in_array($item, $systemcoms)) {
+				$components->enable($item);
+		}
+}
+
+$factory = new OssnFactory(array(
+		'callback' => 'installation',
+		'website' => ossn_site_url(),
+		'email' => ossn_site_settings('owner_email'),
+		'version' => '5.0'
+));
+$factory->connect;
